Fix compilation issue due to Java version conflicts
Signed-off-by: Songkan Tang <songkant@amazon.com>